fix(comps): fixed premature Dropdown value truncation

--- a/src/components/form/Dropdown/Dropdown.module.scss
+++ b/src/components/form/Dropdown/Dropdown.module.scss
@@ -281,6 +281,7 @@ $group-heading-dark-background-color: color.alpha(colors.$white, 0.125);
 
   i:global(.fa) {
     font-size: $icon-size;
+    line-height: $icon-size + 1px;
   }
 }
 
@@ -335,6 +336,7 @@ $group-heading-dark-background-color: color.alpha(colors.$white, 0.125);
 
 .value {
   position: relative;
+  width: 100%;
 
   // &.single {
   //   width: 100%;
@@ -470,7 +472,7 @@ $group-heading-dark-background-color: color.alpha(colors.$white, 0.125);
 
 .singleValue {
   @include position.absolute-anchor($y: 50%);
-  max-width: 98%;
+  max-width: 100%;
   font-size: map.get($value, font-size);
   white-space: nowrap;
   text-overflow: ellipsis;
